Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/yeziahehe/----">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/yeziahehe/Resume">View on GitHub</a>
 
           <h1 id="project_title">resume</h1>
           <h2 id="project_tagline">个人简历</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/yeziahehe/----/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/yeziahehe/----/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/yeziahehe/Resume/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/yeziahehe/Resume/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -111,8 +111,7 @@ git地址：<a href="https://github.com/yeziahehe">https://github.com/yeziahehe<
 <p>• 本人性格开朗、有活力，有思想，待人热情、真诚。<br><br>
 • 工作认真负责，积极主动，能吃苦耐劳。有较强的组织能力、实际动手能力和团体协作精神，能迅速的适应各种环境，并融入其中。<br><br>
 • 在学习方面，拥有较强的学习能力，比较快接受新事物和学习新的知识，主动意识强，有较强的自学能力和思辨能力。<br><br>
-• 我知道自己还是个新人，初生牛犊不怕虎，我希望自己不断学习，不断了解这个行业，不断探索未来发展的方向，我一定会战胜自己，走向成功。<br><br>
-• 朝夕耕耘，图春华秋实，十年寒窗，求学有所用。相信在贵公司的培养和自我的奋斗下，我定会胜任本职工作。</p>
+• 我知道自己还是个新人，初生牛犊不怕虎，我希望自己不断学习，不断了解这个行业，不断探索未来发展的方向，我一定会战胜自己，走向成功。</p>
       </section>
     </div>
 
