--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="resume : 个人简历" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="resume : 个人简历">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -59,8 +59,13 @@
 <h1>
 <a name="%E8%83%BD%E5%8A%9B%E5%8F%8A%E7%89%B9%E9%95%BF" class="anchor" href="#%E8%83%BD%E5%8A%9B%E5%8F%8A%E7%89%B9%E9%95%BF"><span class="octicon octicon-link"></span></a>能力及特长</h1>
 
-<p>熟悉xcode开发环境，熟悉ObjC，C，C++语言，了解SQL语言<br><br>
-爱好素描，书法，专业学习过楷书</p>
+<p>熟悉xcode开发环境<br> 
+熟悉ObjC，C，C++语言<br> 
+熟悉iOS开发技术和各iOS版本特点，能熟练使用iOS开发及测试工具<br><br>
+熟悉基于openfire的客户端即时通讯技术<br>
+熟悉iOS客户端常用的开源库<br>
+能够自定义功能不复杂的库<br>
+热爱移动产品开发</p>
 
 <h1>
 <a name="%E5%9C%A8%E6%A0%A1%E8%81%8C%E5%8A%A1" class="anchor" href="#%E5%9C%A8%E6%A0%A1%E8%81%8C%E5%8A%A1"><span class="octicon octicon-link"></span></a>在校职务</h1>
@@ -95,7 +100,17 @@
 <p>2013.11-至今  苏州大学瑞翼移动互联网研发中心<br></p>
 
 <blockquote>
-<p>参与项目iOS版无线城市app</p>
+<p>参与项目iOS版无线城市app
+<br></p>
+</blockquote>
+
+<p>2014.7-2014.9  苏州誉隆信息技术有限公司<br></p>
+
+<blockquote>
+<p>参与项目iOS版你好苏大app的开发（9月15日左右会上架，目前正在审核中...）
+<br>
+  参与项目iOS版优脉理财app的开发 (10月后会上架，目前处于迭代二开发中...)
+<br></p>
 </blockquote>
 
 <h1>
