--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99"><span class="octicon octicon-link"></span></a>个人资料</h1>
+<a id="个人资料" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99" aria-hidden="true"><span class="octicon octicon-link"></span></a>个人资料</h1>
 
 <p>姓  名：叶帆<br><br>
 婚姻状况：未婚<br><br>
@@ -47,17 +47,17 @@
 地  址：江苏省苏州市干将东路333号苏州大学</p>
 
 <h1>
-<a name="%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF"><span class="octicon octicon-link"></span></a>教育背景</h1>
+<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>教育背景</h1>
 
 <p>2012.9-至今     苏州大学-----计算机科学与技术专业本科</p>
 
 <h1>
-<a name="%E4%B8%BB%E4%BF%AE%E8%AF%BE%E7%A8%8B" class="anchor" href="#%E4%B8%BB%E4%BF%AE%E8%AF%BE%E7%A8%8B"><span class="octicon octicon-link"></span></a>主修课程</h1>
+<a id="主修课程" class="anchor" href="#%E4%B8%BB%E4%BF%AE%E8%AF%BE%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>主修课程</h1>
 
 <p>微积分，C语言程序设计，离散数学，数据结构，计算机组成及系统机构，数据库系统原理，数据库原理与设计，微型计算机技术，计算机通信与网络</p>
 
 <h1>
-<a name="%E8%83%BD%E5%8A%9B%E5%8F%8A%E7%89%B9%E9%95%BF" class="anchor" href="#%E8%83%BD%E5%8A%9B%E5%8F%8A%E7%89%B9%E9%95%BF"><span class="octicon octicon-link"></span></a>能力及特长</h1>
+<a id="能力及特长" class="anchor" href="#%E8%83%BD%E5%8A%9B%E5%8F%8A%E7%89%B9%E9%95%BF" aria-hidden="true"><span class="octicon octicon-link"></span></a>能力及特长</h1>
 
 <p>熟悉xcode开发环境<br> 
 熟悉ObjC，C，C++语言<br> 
@@ -68,17 +68,17 @@
 热爱移动产品开发</p>
 
 <h1>
-<a name="%E5%9C%A8%E6%A0%A1%E8%81%8C%E5%8A%A1" class="anchor" href="#%E5%9C%A8%E6%A0%A1%E8%81%8C%E5%8A%A1"><span class="octicon octicon-link"></span></a>在校职务</h1>
+<a id="在校职务" class="anchor" href="#%E5%9C%A8%E6%A0%A1%E8%81%8C%E5%8A%A1" aria-hidden="true"><span class="octicon octicon-link"></span></a>在校职务</h1>
 
 <p>2012.9-至今  苏州大学12级计算机科学与技术2班    班长</p>
 
 <h1>
-<a name="%E5%A4%96%E8%AF%AD%E6%B0%B4%E5%B9%B3" class="anchor" href="#%E5%A4%96%E8%AF%AD%E6%B0%B4%E5%B9%B3"><span class="octicon octicon-link"></span></a>外语水平</h1>
+<a id="外语水平" class="anchor" href="#%E5%A4%96%E8%AF%AD%E6%B0%B4%E5%B9%B3" aria-hidden="true"><span class="octicon octicon-link"></span></a>外语水平</h1>
 
 <p>通过英语专业四，六级考试，能熟练进行听说读写译。</p>
 
 <h1>
-<a name="%E5%A5%96%E5%8A%B1%E8%8D%A3%E8%AA%89%E6%83%85%E5%86%B5" class="anchor" href="#%E5%A5%96%E5%8A%B1%E8%8D%A3%E8%AA%89%E6%83%85%E5%86%B5"><span class="octicon octicon-link"></span></a>奖励荣誉情况</h1>
+<a id="奖励荣誉情况" class="anchor" href="#%E5%A5%96%E5%8A%B1%E8%8D%A3%E8%AA%89%E6%83%85%E5%86%B5" aria-hidden="true"><span class="octicon octicon-link"></span></a>奖励荣誉情况</h1>
 
 <p>2012.11-2013.6 院科技协会科研部干事<br><br>
 2013年度苏州大学瑞翼科研奖学金三等奖<br><br>
@@ -87,17 +87,17 @@
 英语专业六级证书</p>
 
 <h1>
-<a name="%E5%AE%9E%E4%B9%A0%E7%BB%8F%E9%AA%8C%E6%88%96%E5%AE%9E%E8%B7%B5%E7%BB%8F%E9%AA%8C%E6%88%96%E5%85%BC%E8%81%8C%E7%BB%8F%E9%AA%8C" class="anchor" href="#%E5%AE%9E%E4%B9%A0%E7%BB%8F%E9%AA%8C%E6%88%96%E5%AE%9E%E8%B7%B5%E7%BB%8F%E9%AA%8C%E6%88%96%E5%85%BC%E8%81%8C%E7%BB%8F%E9%AA%8C"><span class="octicon octicon-link"></span></a>实习经验（或实践经验或兼职经验）</h1>
+<a id="实习经验或实践经验或兼职经验" class="anchor" href="#%E5%AE%9E%E4%B9%A0%E7%BB%8F%E9%AA%8C%E6%88%96%E5%AE%9E%E8%B7%B5%E7%BB%8F%E9%AA%8C%E6%88%96%E5%85%BC%E8%81%8C%E7%BB%8F%E9%AA%8C" aria-hidden="true"><span class="octicon octicon-link"></span></a>实习经验（或实践经验或兼职经验）</h1>
 
-<p>2012.11-至今  苏州大学信息化实验室移动开发科研组<br></p>
+<p>2012.11-至今  苏州大学信息化实验室移动开发科研组<br>   </p>
 
 <blockquote>
 <p>负责项目iOS版无线苏大app（git地址：<a href="https://github.com/yeziahehe/wirelessuda">https://github.com/yeziahehe/wirelessuda</a>）<br><br>
   负责项目iOS版移动迎新app (下载地址：<a href="https://itunes.apple.com/us/app/id887440643">https://itunes.apple.com/us/app/id887440643</a>, git地址：<a href="https://github.com/yeziahehe/yidongyingxin">https://github.com/yeziahehe/yidongyingxin</a>）
-<br></p>
+<br>  </p>
 </blockquote>
 
-<p>2013.11-至今  苏州大学瑞翼移动互联网研发中心<br></p>
+<p>2013.11-至今  苏州大学瑞翼移动互联网研发中心<br>  </p>
 
 <blockquote>
 <p>参与项目iOS版无线城市app
@@ -107,21 +107,21 @@
 <p>2014.7-2014.9  苏州誉隆信息技术有限公司<br></p>
 
 <blockquote>
-<p>参与项目iOS版你好苏大app的开发（9月15日左右会上架，目前正在审核中...）
+<p>参与项目iOS版你好苏大app的开发（下载地址：<a href="https://itunes.apple.com/cn/app/ni-hao-su-da/id908165771?mt=8">https://itunes.apple.com/cn/app/ni-hao-su-da/id908165771?mt=8</a>）
 <br>
-  参与项目iOS版优脉理财app的开发 (10月后会上架，目前处于迭代二开发中...)
+  参与项目iOS版优脉财富汇app的开发 (下载地址：<a href="https://itunes.apple.com/cn/app/you-mai-cai-fu-hui-ke-hu-ban/id929465127?mt=8">https://itunes.apple.com/cn/app/you-mai-cai-fu-hui-ke-hu-ban/id929465127?mt=8</a>)
 <br></p>
 </blockquote>
 
 <h1>
-<a name="%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99-1" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99-1"><span class="octicon octicon-link"></span></a>个人资料</h1>
+<a id="个人资料-1" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>个人资料</h1>
 
 <p>博客地址：<a href="http://blog.csdn.net/u011411328">http://blog.csdn.net/u011411328</a><br><br>
 git地址：<a href="https://github.com/yeziahehe">https://github.com/yeziahehe</a><br><br>
 微博地址：<a href="http://weibo.com/u/1850752464">http://weibo.com/u/1850752464</a></p>
 
 <h1>
-<a name="%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7" class="anchor" href="#%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7"><span class="octicon octicon-link"></span></a>自我评价</h1>
+<a id="自我评价" class="anchor" href="#%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7" aria-hidden="true"><span class="octicon octicon-link"></span></a>自我评价</h1>
 
 <p>• 本人性格开朗、有活力，有思想，待人热情、真诚。<br><br>
 • 工作认真负责，积极主动，能吃苦耐劳。有较强的组织能力、实际动手能力和团体协作精神，能迅速的适应各种环境，并融入其中。<br><br>
