Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
 熟悉基于openfire的客户端即时通讯技术<br>
 熟悉iOS客户端常用的开源库<br>
 能够自定义功能不复杂的库<br>
-热爱移动产品开发</p>
+热爱移动产品开发<br>
+熟练使用Sketch基于已有的矢量图模板做UI图标</p>
 
 <h1>
 <a id="在校职务" class="anchor" href="#%E5%9C%A8%E6%A0%A1%E8%81%8C%E5%8A%A1" aria-hidden="true"><span class="octicon octicon-link"></span></a>在校职务</h1>
 
-<p>2012.9-至今  苏州大学12级计算机科学与技术2班    班长</p>
+<p>2012.9-2014.9  苏州大学12级计算机科学与技术2班    班长</p>
 
 <h1>
 <a id="外语水平" class="anchor" href="#%E5%A4%96%E8%AF%AD%E6%B0%B4%E5%B9%B3" aria-hidden="true"><span class="octicon octicon-link"></span></a>外语水平</h1>
