Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <h1>
 <a id="主修课程" class="anchor" href="#%E4%B8%BB%E4%BF%AE%E8%AF%BE%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>主修课程</h1>
 
-<p>微积分，C语言程序设计，离散数学，数据结构，计算机组成及系统机构，数据库系统原理，数据库原理与设计，微型计算机技术，计算机通信与网络</p>
+<p>微积分，C/C++语言程序设计，离散数学，数据结构，计算机组成及系统机构，数据库系统原理，数据库原理与设计，微型计算机技术，计算机通信与网络，操作系统，编译原理</p>
 
 <h1>
 <a id="能力及特长" class="anchor" href="#%E8%83%BD%E5%8A%9B%E5%8F%8A%E7%89%B9%E9%95%BF" aria-hidden="true"><span class="octicon octicon-link"></span></a>能力及特长</h1>
@@ -135,7 +135,7 @@ git地址：<a href="https://github.com/yeziahehe">https://github.com/yeziahehe<
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">resume maintained by <a href="https://github.com/yeziahehe">yeziahehe</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
