--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
 <br></p>
 </blockquote>
 
+<p>2014.11-至今 盒子工作室（自己创办的app工作室）<br></p>
+
+<blockquote>
+<p>负责项目iOS版的米奇零点app开发，3月底完成，目前正在收尾（git地址：<a href="https://github.com/yeziahehe/MickeyFood">https://github.com/yeziahehe/MickeyFood</a>）
+<br></p>
+</blockquote>
+
 <h1>
 <a id="个人资料-1" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>个人资料</h1>
 
