--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <p>2014.11-至今 盒子工作室（自己创办的app工作室）<br></p>
 
 <blockquote>
-<p>欢迎访问盒子工作室 <br>
+<p>欢迎访问<a href="http://120.26.76.252:8080/boxstudio/home.html">盒子工作室</a> <br>
   负责项目iOS版的米奇零点app开发，3月底完成，目前正在收尾（git地址：<a href="https://github.com/yeziahehe/MickeyFood">https://github.com/yeziahehe/MickeyFood</a>）
 <br></p>
 </blockquote>
