Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 <p>2012.11-至今  苏州大学信息化实验室移动开发科研组<br>   </p>
 
 <blockquote>
-<p>负责项目iOS版无线苏大app（git地址：<a href="https://github.com/yeziahehe/wirelessuda">https://github.com/yeziahehe/wirelessuda</a>）<br><br>
-  负责项目iOS版移动迎新app (下载地址：<a href="https://itunes.apple.com/us/app/id887440643">https://itunes.apple.com/us/app/id887440643</a>, git地址：<a href="https://github.com/yeziahehe/yidongyingxin">https://github.com/yeziahehe/yidongyingxin</a>）
+<p>负责项目iOS版无线苏大app（<a href="https://github.com/yeziahehe/wirelessuda">Git</a>）<br><br>
+  负责项目iOS版移动迎新app (<a href="https://itunes.apple.com/us/app/id887440643">App Store</a>, <a href="https://github.com/yeziahehe/yidongyingxin">Git</a>）
 <br>  </p>
 </blockquote>
 
@@ -95,26 +95,26 @@
 <p>2014.7-2014.9  苏州誉隆信息技术有限公司<br></p>
 
 <blockquote>
-<p>参与项目iOS版你好苏大app的开发（下载地址：<a href="https://itunes.apple.com/cn/app/ni-hao-su-da/id908165771?mt=8">https://itunes.apple.com/cn/app/ni-hao-su-da/id908165771?mt=8</a>）
+<p>参与项目iOS版你好苏大app的开发（<a href="https://itunes.apple.com/cn/app/ni-hao-su-da/id908165771?mt=8">App Store</a>）
 <br>
-  参与项目iOS版优脉财富汇app的开发 (下载地址：<a href="https://itunes.apple.com/cn/app/you-mai-cai-fu-hui-ke-hu-ban/id929465127?mt=8">https://itunes.apple.com/cn/app/you-mai-cai-fu-hui-ke-hu-ban/id929465127?mt=8</a>)
+  参与项目iOS版优脉财富汇app的开发 (<a href="https://itunes.apple.com/cn/app/you-mai-cai-fu-hui-ke-hu-ban/id929465127?mt=8">App Store</a>)
 <br></p>
 </blockquote>
 
-<p>2014.11-至今 盒子工作室（自己创办的app工作室）<br></p>
+<p>2014.11-至今 苏州倡予信息科技有限公司 董事长<br></p>
 
 <blockquote>
-<p>欢迎访问<a href="http://120.26.76.252:8080/boxstudio/home.html">盒子工作室</a> <br>
-  负责项目iOS版的米奇零点app开发(下载地址：<a href="https://itunes.apple.com/cn/app/mi-qi-ling-dian/id980883989?mt=8">https://itunes.apple.com/cn/app/mi-qi-ling-dian/id980883989?mt=8</a>，git地址：<a href="https://github.com/yeziahehe/MickeyFood">https://github.com/yeziahehe/MickeyFood</a>）
+<p>欢迎访问<a href="http://120.26.76.252:8080/boxstudio/home.html">倡予科技</a> <br>
+  负责项目iOS版的米奇零点app开发(<a href="https://itunes.apple.com/cn/app/mi-qi-ling-dian/id980883989?mt=8">App Store</a>，<a href="https://github.com/yeziahehe/MickeyFood">Git</a>）
 <br></p>
 </blockquote>
 
 <h1>
 <a id="个人资料-1" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>个人资料</h1>
 
-<p>博客地址：<a href="http://blog.csdn.net/u011411328">http://blog.csdn.net/u011411328</a><br><br>
-git地址：<a href="https://github.com/yeziahehe">https://github.com/yeziahehe</a><br><br>
-微博地址：<a href="http://weibo.com/u/1850752464">http://weibo.com/u/1850752464</a></p>
+<p><a href="http://blog.csdn.net/u011411328">博客</a><br><br>
+<a href="https://github.com/yeziahehe">github</a><br><br>
+<a href="http://weibo.com/u/1850752464">微博</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/yeziahehe/Resume">resume</a> is maintained by <a href="https://github.com/yeziahehe">yeziahehe</a>.</span>
