Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>resume by yeziahehe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -106,7 +106,8 @@
 <blockquote>
 <p>欢迎访问<a href="http://120.26.76.252:8080/boxstudio/home.html">倡予科技</a> <br>
   负责项目iOS版的米奇零点app开发 <a href="https://itunes.apple.com/cn/app/mi-qi-ling-dian/id980883989?mt=8">App Store</a>，<a href="https://github.com/yeziahehe/MickeyFood">Git</a>
-<br></p>
+<br>
+  负责项目iOS版心笑app开发 <a href="https://itunes.apple.com/cn/app/mi-qi-ling-dian/id1024425153?mt=8">App Store</a></p>
 </blockquote>
 
 <h1>
@@ -114,7 +115,7 @@
 
 <ul>
 <li>
-<a href="http://blog.csdn.net/u011411328">博客</a><br><br>
+<a href="http://yeziahehe.com">博客</a><br><br>
 </li>
 <li>
 <a href="https://github.com/yeziahehe">github</a><br><br>
@@ -133,4 +134,3 @@
   
   </body>
 </html>
-
