--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
 </blockquote>
 
 <h1>
+<a id="自我评价" class="anchor" href="#%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7" aria-hidden="true"><span class="octicon octicon-link"></span></a>自我评价</h1>
+
+<ul>
+<li>技术方面，写了一套自己的iOS框架，网络库，异步加载图片库，常用的自定义库，比较熟练的理解封装和抽象的思想。<br>
+</li>
+<li>项目管理方面，熟悉年轻人常用的项目管理方式，slack+teambition+Trello+pop+bitbucket。<br>
+</li>
+<li>管理方面，担任苏州倡予信息科技有限公司CEO，熟悉公司的管理流程，有项目经理的经验，会带技术团队。 </li>
+</ul>
+
+<h1>
 <a id="个人资料-1" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E8%B5%84%E6%96%99-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>个人资料</h1>
 
 <ul>
