Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 <p>欢迎访问<a href="http://120.26.76.252:8080/boxstudio/home.html">倡予科技</a> <br>
   负责项目iOS版的米奇零点app开发 <a href="https://itunes.apple.com/cn/app/mi-qi-ling-dian/id980883989?mt=8">App Store</a>，<a href="https://github.com/yeziahehe/MickeyFood">Git</a>
 <br>
-  负责项目iOS版心笑app开发 <a href="https://itunes.apple.com/cn/app/mi-qi-ling-dian/id1024425153?mt=8">App Store</a></p>
+  负责项目iOS版心笑app开发 <a href="https://itunes.apple.com/cn/app/mi-qi-ling-dian/id1024425153?mt=8">App Store</a>
+  负责项目iOS版For优app开发 <a href="https://itunes.apple.com/cn/app/for-you/id1037938173?mt=8">App Store</a></p>
 </blockquote>
 
 <h1>
@@ -140,6 +141,16 @@
 
     </section>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-68552067-2");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
