Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <br></p>
 </blockquote>
 
-<p>2014.11-至今 苏州倡予信息科技有限公司 董事长<br></p>
+<p>2014.11-至今 苏州倡予信息科技有限公司 联合创始人<br></p>
 
 <blockquote>
 <p>欢迎访问<a href="http://120.26.76.252:8080/boxstudio/home.html">倡予科技</a> <br>
@@ -117,7 +117,7 @@
 <ul>
 <li><p>技术方面，写了一套自己的iOS框架，网络库，异步加载图片库，常用的自定义库，比较熟练的理解封装和抽象的思想。</p></li>
 <li><p>项目管理方面，熟悉年轻人常用的项目管理方式，slack+teambition+Trello+pop+bitbucket。</p></li>
-<li><p>管理方面，担任苏州倡予信息科技有限公司CEO，熟悉公司的管理流程，有项目经理的经验，会带技术团队。 </p></li>
+<li><p>管理方面，担任苏州倡予信息科技有限公司 联合创始人，熟悉公司的管理流程，有项目经理的经验，会带技术团队。 </p></li>
 </ul>
 
 <h1>
